ARROW-14778: [C++] Mean of Decimal should be Double